Bug 100937 - Mesa fails to build with GCC 4.8
Summary: Mesa fails to build with GCC 4.8
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-04 20:57 UTC by network723
Modified: 2017-05-05 16:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch (941 bytes, patch)
2017-05-05 09:23 UTC, Samuel Pitoiset
Details | Splinter Review

Description network723 2017-05-04 20:57:18 UTC
Recent Mesa (git 7b55a05159) fails to build with GCC 4.8 (opensuse 42.2), but does build with GCC 6 (opensuse TW)

[  434s] Making all in drivers/radeonsi
[  434s] make[4]: Entering directory '/home/abuild/rpmbuild/BUILD/mesa/src/gallium/drivers/radeonsi'
[  434s]   CC       si_blit.lo
[  434s]   CC       si_compute.lo
[  434s]   CC       cik_sdma.lo
[  434s]   CC       si_cp_dma.lo
[  434s]   CC       si_debug.lo
[  434s]   CC       si_descriptors.lo
[  435s]   CC       si_dma.lo
[  435s]   CC       si_hw_context.lo
[  435s]   CC       si_pipe.lo
[  435s]   CC       si_pm4.lo
[  435s]   CC       si_perfcounter.lo
[  436s] si_perfcounter.c:314:1: error: initializer element is not constant
[  436s]  };
[  436s]  ^
[  436s] Makefile:691: recipe for target 'si_perfcounter.lo' failed
[  436s] make[4]: *** [si_perfcounter.lo] Error 1
[  436s] make[4]: *** Waiting for unfinished jobs....
[  436s] make[4]: Leaving directory '/home/abuild/rpmbuild/BUILD/mesa/src/gallium/drivers/radeonsi'
[  436s] Makefile:587: recipe for target 'all-recursive' failed
[  436s] make[3]: *** [all-recursive] Error 1
[  436s] make[3]: Leaving directory '/home/abuild/rpmbuild/BUILD/mesa/src/gallium'
[  436s] Makefile:840: recipe for target 'all-recursive' failed
[  436s] make[2]: *** [all-recursive] Error 1
[  436s] make[2]: Leaving directory '/home/abuild/rpmbuild/BUILD/mesa/src'
[  436s] Makefile:630: recipe for target 'all' failed
[  436s] make[1]: *** [all] Error 2
[  436s] make[1]: Leaving directory '/home/abuild/rpmbuild/BUILD/mesa/src'
[  436s] Makefile:632: recipe for target 'all-recursive' failed
[  436s] make: *** [all-recursive] Error 1
Comment 1 Samuel Pitoiset 2017-05-05 09:23:40 UTC
Created attachment 131225 [details] [review]
patch

Can you try this patch?
Comment 2 network723 2017-05-05 11:53:13 UTC
(In reply to Samuel Pitoiset from comment #1)
> Created attachment 131225 [details] [review] [review]
> patch
> 
> Can you try this patch?

It did build successfully with the proposed patch.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.